# pinner

./: .gitignore  .pinner.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  JULES.md  LICENSE  README.md  SECURITY.md  deny.toml  docs-header.html  fix_operations.py  install.ps1  install.sh  pre-commit-hooks.yaml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docs.yml  release.yml
action/: action.yml
benches/: pinner_bench.rs
docs/: configuration.html  getting-started.html  index.html
docs/css/: style.css
docs/js/: components.js
docs/llm/: development.md  overview.md  patcher.md  resolver.md  scanner.md
scripts/: release.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  operations.rs  yaml.rs
src/core/: dependency.rs  mod.rs  update.rs
src/github/: mod.rs
src/patcher/: disk.rs  formatter.rs  mod.rs  mutator.rs  ui.rs
src/pipeline/: init.rs  mod.rs  pr.rs  sbom.rs  scan.rs
src/providers/: mod.rs
src/registry/: mod.rs
src/resolver/: azure.rs  bitbucket.rs  circleci.rs  forgejo.rs  github.rs  gitlab.rs  mod.rs  osv.rs  provider.rs  registry.rs  unified.rs
src/scanner/: mod.rs  parser.rs  walker.rs
tests/: cli.rs  integration.rs
