[package]
name = "pinner"
version = "0.0.1"
edition = "2021"
description = "A CLI utility to hash-pin GitHub Actions"
authors = ["Fabio Falcinelli"]
license = "MIT"
repository = "https://github.com/ffalcinelli/pinner"
documentation = "https://ffalcinelli.github.io/pinner/latest/pinner/index.html"
readme = "README.md"
keywords = ["github-actions", "security", "pinning", "hash", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
async-trait = "0.1"
mockall = "0.12"
colored = "2.1"
thiserror = "1.0"
anyhow = "1.0"
tree-sitter = "0.20"
tree-sitter-yaml = "0.0.1"
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
futures = "0.3"
similar = "2.4"
ignore = "0.4"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "prepush-hook", "run-cargo-fmt", "user-hooks"] }
tempfile = "3.10"
mockito = "1.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
